[package]
name = "trusttunnel-keenetic"
version = "1.0.0"
edition = "2021"
authors = ["TrustTunnel Community"]
description = "TrustTunnel VPN wrapper for Keenetic/Netcraze routers"
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[dependencies]
tiny_http = "0.12"
ureq = "2.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "fast-rng"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.28", features = ["process", "signal", "fs", "net"] }
